--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -20,7 +20,7 @@ jobs:
           echo "GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN  }}"
       - name: Log OPENAI API KEY
         run: |
-          echo "OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}"
+          echo "OPENAI_API_KEY: ${{ env.OPENAI_API_KEY }}"
         
       - name: Verify Pull Request Number
         run: |
